fix: небольшие изменения