@@ -3,7 +3,10 @@ package ru.practicum.shareit.item.dao;
 import org.springframework.stereotype.Repository;
 import ru.practicum.shareit.item.model.Item;
 
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Repository
@@ -39,14 +42,13 @@ public class InMemoryItemDao implements ItemDao {
     @Override
     public List<Item> findAllBySubstring(String substring) {
         String query = substring.toLowerCase();
-
         if (query.equals("")) {
-            return Collections.emptyList();
-        } else {
-            return items.values().stream()
-                    .filter(item -> (item.getName().toLowerCase().contains(query))
-                            || (item.getDescription().toLowerCase().contains(query)))
-                    .collect(Collectors.toList());
+            return List.of();
         }
+
+        return items.values().stream()
+                .filter(item -> (item.getName().toLowerCase().contains(query))
+                        || (item.getDescription().toLowerCase().contains(query)))
+                .collect(Collectors.toList());
     }
 }
